--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -107,7 +107,7 @@
                     android:layout_marginVertical="30px"
                     android:layout_weight="1"
                     android:backgroundTint="#5E8BFF"
-                    android:text="@string/QuitButton"
+                    android:text="@string/ReturnButton"
                     android:textSize="36sp" />
             </LinearLayout>
 
@@ -118,32 +118,6 @@
             android:layout_height="374dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:id="@+id/infoButton"
-                        android:layout_width="52dp"
-                        android:layout_height="60dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginBottom="8dp"
-                        android:backgroundTint="@color/blue"
-                        android:text="@string/InfoButton"
-                        android:textAllCaps="false"
-                        android:textSize="24sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
